--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "nuxt": "^3.11.2",
+    "primevue": "^3.51.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "nuxt-primevue": "^0.3.1",
+    "primeicons": "^7.0.0"
   }
 }
